ready to test on linux

--- a/DiscordBotMonitor/Pages/Index.cshtml
+++ b/DiscordBotMonitor/Pages/Index.cshtml
@@ -5,4 +5,4 @@
     ViewData["Title"] = "Home page";
 }
 
-<component type="typeof(Counter)" render-mode="ServerPrerendered" />
+<component type="typeof(BotManager)" render-mode="ServerPrerendered" />
