updating for linux

--- a/DiscordBotMonitor/Pages/Shared/BotManager.razor
+++ b/DiscordBotMonitor/Pages/Shared/BotManager.razor
@@ -19,7 +19,7 @@
                     Arguments = "",
                     UseShellExecute = false,
                     RedirectStandardOutput = true,
-                    CreateNoWindow = true
+                    CreateNoWindow = false
                 }
             };
             proc.Start();
