--- a/DBM/Pages/BotManager.razor
+++ b/DBM/Pages/BotManager.razor
@@ -2,53 +2,35 @@
 @using System.Diagnostics
 <PageTitle>Bot Manager</PageTitle>
 <h3>BotManager</h3>
-<p>>UwUBot Status: @UwUBotStatus</p>
+<p>UwUBot Status: @UwUBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartUwUBot">Start UwUBot</button>
 <button class="btn btn-primary" @onclick="StopUwUBot">Stop UwUBot</button>
 
-@code {
-    private string UwUBotStatus = "Offline :'(";
-    Process CurrentProc;
+<p>Dick Johnson Status: @DickJohnson.BotStatus</p>
 
+<button class="btn btn-primary" @onclick="StartDickJohnson">Start Dick Johnson</button>
+<button class="btn btn-primary" @onclick="StopDickJohnson">Stop Dick Johnson</button>
+
+@code {
+    BotController UwUBot = new BotController("UwUBot");
+    BotController DickJohnson = new BotController("Dick Johnson");
     private void StartUwUBot()
     {
-        if (UwUBotStatus != "Online")
-        {
-            try
-            {
-
-                CurrentProc = new Process
-                    {
-                        StartInfo = new ProcessStartInfo
-                        {
-                            FileName = "StartUwUBot.sh",
-                            Arguments = "",
-                            UseShellExecute = false,
-                            WorkingDirectory = "/home/andym/DiscordBotMonitor/DBM",
-                            RedirectStandardOutput = true,
-                            CreateNoWindow = false
-                        }
-                    };
-                CurrentProc.Start();
-                UwUBotStatus = "Online";
-            }
-            catch (Exception e)
-            {
-                UwUBotStatus = "Offline :'(";
-                Console.WriteLine(e.Message);
-            }
-        }
-
+        UwUBot.StartBot("StartUwUBot.sh");
     }
     private void StopUwUBot()
     {
-        if (UwUBotStatus == "Online")
-        {
-            CurrentProc.Kill(true);
-            CurrentProc.Dispose();
-            UwUBotStatus = "Offline";
-        }
+        UwUBot.StopBot();
     }
+    private void StartDickJohnson()
+    {
+        DickJohnson.StartBot("StartDickJohnson.sh");
+    }
+    private void StopDickJohnson()
+    {
+        DickJohnson.StopBot();
+    }
+
 
 }
