UwUBot and DickJohnson work

--- a/DBM/Pages/BotManager.razor
+++ b/DBM/Pages/BotManager.razor
@@ -17,7 +17,7 @@
     BotController DickJohnson = new BotController("Dick Johnson");
     private void StartUwUBot()
     {
-        UwUBot.StartBot("StartUwUBot.sh");
+        UwUBot.StartBot("uwu.js", "/bin/node", "../../../../../../Discord-Bots/UwUBot/");
     }
     private void StopUwUBot()
     {
@@ -25,7 +25,7 @@
     }
     private void StartDickJohnson()
     {
-        DickJohnson.StartBot("StartDickJohnson.sh");
+        DickJohnson.StartBot("run", "/bin/dotnet", "../../../../../../Discord-Bots/DickJohnson");
     }
     private void StopDickJohnson()
     {
