--- a/DBM/Pages/BotManager.razor
+++ b/DBM/Pages/BotManager.razor
@@ -14,37 +14,49 @@
 <button class="btn btn-primary" @onclick="StartDickJohnson">Start Dick Johnson</button>
 <button class="btn btn-primary" @onclick="StopDickJohnson">Stop Dick Johnson</button>
 
+<p>Error Box: @DickJohnson.Error</p>
+
 <p>PirateBot Status: @PirateBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartPirateBot">Start PirateBot</button>
 <button class="btn btn-primary" @onclick="StopPirateBot">Stop PirateBot</button>
+
+<p>Error Box: @PirateBot.Error</p>
 
 <p>Tarot Bot Status: @TarotBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartTarotBot">Start Tarot Bot</button>
 <button class="btn btn-primary" @onclick="StopTarotBot">Stop Tarot Bot</button>
 
+<p>Error Box: @TarotBot.Error</p>
+
 <p>JonTron Bot Status: @JonTronBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartJonTronBot">Start JonTron Bot</button>
 <button class="btn btn-primary" @onclick="StopJonTronBot">Stop JonTron Bot</button>
+
+<p>Error Box: @JonTronBot.Error</p>
 
 <p>OyVey Bot Status: @OyVeyBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartOyVeyBot">Start OyVey Bot</button>
 <button class="btn btn-primary" @onclick="StopOyVeyBot">Stop OyVey Bot</button>
 
+<p>Error Box: @OyVeyBot.Error</p>
+
 <p>TerryDavis Bot Status: @TerryDavisBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartTerryDavisBot">Start TerryDavis Bot</button>
 <button class="btn btn-primary" @onclick="StopTerryDavisBot">Stop TerryDavis Bot</button>
+
+<p>Error Box: @TerryDavisBot.Error</p>
 
 <p>OwO Bot Status: @OwOBot.BotStatus</p>
 
 <button class="btn btn-primary" @onclick="StartOwOBot">Start OwO Bot</button>
 <button class="btn btn-primary" @onclick="StopOwOBot">Stop OwO Bot</button>
 
-
+<p>Error Box: @OwOBot.Error</p>
 
 @code {
     BotController UwUBot = new BotController("UwUBot");
@@ -82,7 +94,7 @@
     }
     private void StartTarotBot()
     {
-        TarotBot.StartBot("tarot.js", "/bin/node", "../../../../../../Discord-Bots/TarotBot/");
+        TarotBot.StartBot("tarot.js", "/bin/node", "/home/andym/Discord-Bots/TarotBot/");
     }
     private void StopTarotBot()
     {
@@ -90,7 +102,7 @@
     }
     private void StartJonTronBot()
     {
-        JonTronBot.StartBot("jontron.js", "/bin/node", "../../../../../../Discord-Bots/JonTronBot/");
+        JonTronBot.StartBot("jontron.js", "/bin/node", "/home/andym/Discord-Bots/JonTronBot/");
     }
     private void StopJonTronBot()
     {
@@ -98,7 +110,7 @@
     }
     private void StartOyVeyBot()
     {
-        OyVeyBot.StartBot("OyVeyBot.js", "/bin/node", "../../../../../../Discord-Bots/OyVeyBot/");
+        OyVeyBot.StartBot("OyVeyBot.js", "/bin/node", "/home/andym/Discord-Bots/OyVeyBot/");
     }
     private void StopOyVeyBot()
     {
@@ -106,7 +118,7 @@
     }
     private void StartTerryDavisBot()
     {
-        TerryDavisBot.StartBot("terrydavisbot.js", "/bin/node", "../../../../../../Discord-Bots/TerryDavisBot/");
+        TerryDavisBot.StartBot("terrydavisbot.js", "/bin/node", "/home/andym/Discord-Bots/TerryDavisBot/");
     }
     private void StopTerryDavisBot()
     {
@@ -114,7 +126,7 @@
     }
     private void StartOwOBot()
     {
-        OwOBot.StartBot("OwOBot.js", "/home/andy/.nvm/versions/node/v16.14.2/bin/node", "../../../../../../Discord-Bots/OwOBot/"); //this weird node is for the latest installed by nvm
+        OwOBot.StartBot("OwOBot.js", "/home/andy/.nvm/versions/node/v16.14.2/bin/node", "/home/andym/Discord-Bots/OwOBot/"); //this weird node is for the latest installed by nvm
     }
     private void StopOwOBot()
     {
