typo for nvm location

--- a/DBM/Pages/BotManager.razor
+++ b/DBM/Pages/BotManager.razor
@@ -126,7 +126,7 @@
     }
     private void StartOwOBot()
     {
-        OwOBot.StartBot("OwOBot.js", "/home/andy/.nvm/versions/node/v16.14.2/bin/node", "/home/andym/Discord-Bots/OwOBot/"); //this weird node is for the latest installed by nvm
+        OwOBot.StartBot("OwOBot.js", "/home/andym/.nvm/versions/node/v16.14.2/bin/node", "/home/andym/Discord-Bots/OwOBot/"); //this weird node is for the latest installed by nvm
     }
     private void StopOwOBot()
     {
